2009-02-10  Ian Beckwith  <ianb@erislabs.net>

	* Bumped version of Free Documentation License to 1.3 or later,
	  still with no Invariant Sections, no Front-Cover Texts, no
	  Back-Cover Texts.
	* Updated gnulib to commit 69aecd33.
	* prepare: stop importing memmove module: obsolete.
	* Makefile.am: add m4/sockpfaf.m4 to EXTRA_DIST.
	* .gitignore: add lib/fcntl.h and lib/signal.h.
	* Update NEWS.

2009-02-08  Ian Beckwith  <ianb@erislabs.net>

	* Added filetype info for many more file extensions.
	  Thanks to Tudor Hulubei (and Wikipedia).

2009-01-12  Ian Beckwith  <ianb@erislabs.net>

	* src/git.transition: remove bashisms (Thanks to Gerald Pfeifer).

2008-10-24  Ian Beckwith  <ianb@erislabs.net>

	* panel_fit_number(): If number with commas is too big,
	  go straight to autoscale without trying to drop commas first.
	* panel_update_size(): show available space (fsu.fsu_bavail)
	  instead of free space (fsu.fsu_bfree), even as root.

2008-09-12  Ian Beckwith  <ianb@erislabs.net>

	* Bump version to 4.9.5.
	* Fix incorrect INSTALL_PROGRAM calls.
	  Thanks to James Rowe.
	* gitaction: add xdg-open, kfmclient, exo-open.

2008-06-16  Ian Beckwith  <ianb@erislabs.net>

	* gitaction:
	  + support .7z files
	  + MacOS: don't run open(1) on archives, it expands them.

2008-06-10  Ian Beckwith  <ianb@erislabs.net>

	* Update to gnulib 20080610 commit 765ede78
	  (fixes strcasestr configure test hang).
	* gitaction:
	  + unzip: use -l instead of -v.
	  + try rar as well as unrar for *.rar|*.cbr.

2008-05-27  Ian Beckwith  <ianb@erislabs.net>

	* Update to gnulib 20080527 commit 9c504099.
	* gitaction: Don't prompt for keypress after running MacOS open(1).

2008-05-18  Ian Beckwith  <ianb@erislabs.net>

	* Add apropos command (^X^A) for key-binding search.
	* Change GIT_ env vars to GNUIT_ (eg GNUIT_PAGER).
	  Fall back to old names for backwards compatibility.
	* Use mkstemp() for temporary files.
	* Update to gnulib 20080512 commit 6ea7ea7.