@@ -35,18 +35,18 @@
 ###
 
 [GITFM-FTI]
-*.pgp		   = BLACK;;
-*.pgp.[bg]z	   = BLACK;;
-*.pgp.bz2	   = BLACK;;
-*.pgp.Z		   = BLACK;;
-*.gpg		   = BLACK;;
-*.gpg.[bg]z	   = BLACK;;
-*.gpg.bz2	   = BLACK;;
-*.gpg.Z		   = BLACK;;
-*.gpg.asc	   = BLACK;;
-*.gpg.asc.[bg]z	   = BLACK;;
-*.gpg.asc.bz2	   = BLACK;;
-*.gpg.asc.Z	   = BLACK;;
+*.pgp		   = GREEN;;
+*.pgp.[bg]z	   = GREEN;;
+*.pgp.bz2	   = GREEN;;
+*.pgp.Z		   = GREEN;;
+*.gpg		   = GREEN;;
+*.gpg.[bg]z	   = GREEN;;
+*.gpg.bz2	   = GREEN;;
+*.gpg.Z		   = GREEN;;
+*.gpg.asc	   = GREEN;;
+*.gpg.asc.[bg]z	   = GREEN;;
+*.gpg.asc.bz2	   = GREEN;;
+*.gpg.asc.Z	   = GREEN;;
 *.[chlysp]	   = GREEN;; ON
 *.[chlysp].[bg]z   = GREEN;; ON
 *.[chlysp].bz2	   = GREEN;; ON
@@ -736,66 +736,66 @@ OUTBOX*		   = WHITE;;
 *.g3.[bg]z	   = MAGENTA;; ON
 *.g3.bz2	   = MAGENTA;; ON
 *.g3.Z		   = MAGENTA;; ON
-*.mov		   = BLACK;;
-*.mov.[bg]z	   = BLACK;;
-*.mov.bz2	   = BLACK;;
-*.mov.Z		   = BLACK;;
-*.mp[4g]	   = BLACK;;
-*.mp[4g].[bg]z	   = BLACK;;
-*.mp[4g].bz2	   = BLACK;;
-*.mp[4g].Z	   = BLACK;;
-*.mpeg		   = BLACK;;
-*.mpeg.[bg]z	   = BLACK;;
-*.mpeg.bz2	   = BLACK;;
-*.mpeg.Z	   = BLACK;;
-*.avi		   = BLACK;;
-*.avi.[bg]z	   = BLACK;;
-*.avi.bz2	   = BLACK;;
-*.avi.Z		   = BLACK;;
-*.fli		   = BLACK;;
-*.fli.[bg]z	   = BLACK;;
-*.fli.bz2	   = BLACK;;
-*.fli.Z		   = BLACK;;
-*.flc		   = BLACK;;
-*.flc.[bg]z	   = BLACK;;
-*.flc.bz2	   = BLACK;;
-*.flc.Z		   = BLACK;;
-*.3gp		   = BLACK;;
-*.3gp.[bg]z	   = BLACK;;
-*.3gp.bz2	   = BLACK;;
-*.3gp.Z		   = BLACK;;
-*.cam		   = BLACK;;
-*.cam.[bg]z	   = BLACK;;
-*.cam.bz2	   = BLACK;;
-*.cam.Z		   = BLACK;;
-*.dat		   = BLACK;;
-*.dat.[bg]z	   = BLACK;;
-*.dat.bz2	   = BLACK;;
-*.dat.Z		   = BLACK;;
-*.divx		   = BLACK;;
-*.divx.[bg]z	   = BLACK;;
-*.divx.bz2	   = BLACK;;
-*.divx.Z	   = BLACK;;
-*.flv		   = BLACK;;
-*.flv.[bg]z	   = BLACK;;
-*.flv.bz2	   = BLACK;;
-*.flv.Z		   = BLACK;;
-*.mkv		   = BLACK;;
-*.mkv.[bg]z	   = BLACK;;
-*.mkv.bz2	   = BLACK;;
-*.mkv.Z		   = BLACK;;
-*.ogm		   = BLACK;;
-*.ogm.[bg]z	   = BLACK;;
-*.ogm.bz2	   = BLACK;;
-*.ogm.Z		   = BLACK;;
-*.swf		   = BLACK;;
-*.swf.[bg]z	   = BLACK;;
-*.swf.bz2	   = BLACK;;
-*.swf.Z		   = BLACK;;
-*.wmv		   = BLACK;;
-*.wmv.[bg]z	   = BLACK;;
-*.wmv.bz2	   = BLACK;;
-*.wmv.Z		   = BLACK;;
+*.mov		   = BLACK;;ON
+*.mov.[bg]z	   = BLACK;;ON
+*.mov.bz2	   = BLACK;;ON
+*.mov.Z		   = BLACK;;ON
+*.mp[4g]	   = BLACK;;ON
+*.mp[4g].[bg]z	   = BLACK;;ON
+*.mp[4g].bz2	   = BLACK;;ON
+*.mp[4g].Z	   = BLACK;;ON
+*.mpeg		   = BLACK;;ON
+*.mpeg.[bg]z	   = BLACK;;ON
+*.mpeg.bz2	   = BLACK;;ON
+*.mpeg.Z	   = BLACK;;ON
+*.avi		   = BLACK;;ON
+*.avi.[bg]z	   = BLACK;;ON
+*.avi.bz2	   = BLACK;;ON
+*.avi.Z		   = BLACK;;ON
+*.fli		   = BLACK;;ON
+*.fli.[bg]z	   = BLACK;;ON
+*.fli.bz2	   = BLACK;;ON
+*.fli.Z		   = BLACK;;ON
+*.flc		   = BLACK;;ON
+*.flc.[bg]z	   = BLACK;;ON
+*.flc.bz2	   = BLACK;;ON
+*.flc.Z		   = BLACK;;ON
+*.3gp		   = BLACK;;ON
+*.3gp.[bg]z	   = BLACK;;ON
+*.3gp.bz2	   = BLACK;;ON
+*.3gp.Z		   = BLACK;;ON
+*.cam		   = BLACK;;ON
+*.cam.[bg]z	   = BLACK;;ON
+*.cam.bz2	   = BLACK;;ON
+*.cam.Z		   = BLACK;;ON
+*.dat		   = BLACK;;ON
+*.dat.[bg]z	   = BLACK;;ON
+*.dat.bz2	   = BLACK;;ON
+*.dat.Z		   = BLACK;;ON
+*.divx		   = BLACK;;ON
+*.divx.[bg]z	   = BLACK;;ON
+*.divx.bz2	   = BLACK;;ON
+*.divx.Z	   = BLACK;;ON
+*.flv		   = BLACK;;ON
+*.flv.[bg]z	   = BLACK;;ON
+*.flv.bz2	   = BLACK;;ON
+*.flv.Z		   = BLACK;;ON
+*.mkv		   = BLACK;;ON
+*.mkv.[bg]z	   = BLACK;;ON
+*.mkv.bz2	   = BLACK;;ON
+*.mkv.Z		   = BLACK;;ON
+*.ogm		   = BLACK;;ON
+*.ogm.[bg]z	   = BLACK;;ON
+*.ogm.bz2	   = BLACK;;ON
+*.ogm.Z		   = BLACK;;ON
+*.swf		   = BLACK;;ON
+*.swf.[bg]z	   = BLACK;;ON
+*.swf.bz2	   = BLACK;;ON
+*.swf.Z		   = BLACK;;ON
+*.wmv		   = BLACK;;ON
+*.wmv.[bg]z	   = BLACK;;ON
+*.wmv.bz2	   = BLACK;;ON
+*.wmv.Z		   = BLACK;;ON
 *.au		   = CYAN;; ON
 *.au.[bg]z	   = CYAN;; ON
 *.au.bz2	   = CYAN;; ON
